cmake_minimum_required(VERSION 3.1)
project(abc_135)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc135_a abc135_a.cpp)
add_executable(abc135_b abc135_b.cpp)
add_executable(abc135_c abc135_c.cpp)
add_executable(abc135_d abc135_d.cpp)
add_executable(abc135_e abc135_e.cpp)
add_executable(abc135_f abc135_f.cpp)
