cmake_minimum_required(VERSION 3.1)
project(abc_136)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc136_a abc136_a.cpp)
add_executable(abc136_b abc136_b.cpp)
add_executable(abc136_c abc136_c.cpp)
add_executable(abc136_d abc136_d.cpp)
add_executable(abc136_e abc136_e.cpp)
add_executable(abc136_f abc136_f.cpp)
