cmake_minimum_required(VERSION 3.1)
project(abc_140)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc140_a abc140_a.cpp)
add_executable(abc140_b abc140_b.cpp)
add_executable(abc140_c abc140_c.cpp)
add_executable(abc140_d abc140_d.cpp)
add_executable(abc140_e abc140_e.cpp)
add_executable(abc140_f abc140_f.cpp)
