cmake_minimum_required(VERSION 3.1)
project(diverta_2019)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(diverta2019_a diverta2019_a.cpp)
add_executable(diverta2019_b diverta2019_b.cpp)
add_executable(diverta2019_c diverta2019_c.cpp)
add_executable(diverta2019_d diverta2019_d.cpp)
add_executable(diverta2019_e diverta2019_e.cpp)
add_executable(diverta2019_f diverta2019_f.cpp)
