cmake_minimum_required(VERSION 3.1)
project(abc_127)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc127_a abc127_a.cpp)
add_executable(abc127_b abc127_b.cpp)
add_executable(abc127_c abc127_c.cpp)
add_executable(abc127_d abc127_d.cpp)
add_executable(abc127_e abc127_e.cpp)
add_executable(abc127_f abc127_f.cpp)
