cmake_minimum_required(VERSION 3.1)
project(abc_145)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc145_a abc145_a.cpp)
add_executable(abc145_b abc145_b.cpp)
add_executable(abc145_c abc145_c.cpp)
add_executable(abc145_d abc145_d.cpp)
add_executable(abc145_e abc145_e.cpp)
add_executable(abc145_f abc145_f.cpp)
