cmake_minimum_required(VERSION 3.1)
project(abc_148)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(abc148_a abc148_a.cpp)
add_executable(abc148_b abc148_b.cpp)
add_executable(abc148_c abc148_c.cpp)
add_executable(abc148_d abc148_d.cpp)
add_executable(abc148_e abc148_e.cpp)
add_executable(abc148_f abc148_f.cpp)
